@@ -18,18 +18,22 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)t5.c	1.6 (gritter) 2/26/06
+ * Sccsid @(#)t5.c	1.7 (gritter) 9/8/06
  */
 
  /* t5.c: read data for table */
+# include <stdlib.h>
+# include <string.h>
 # include "t..c"
 # include <inttypes.h>
+static int morelines(int);
 void
 gettbl(void)
 {
 int icol, ch;
 char *ocbase;
 size_t linesize = MAXSTR;
+morelines(0);
 cbase=cstore=cspace= chspace();
 textflg=0;
 for (nlin=nslin=0; ocbase=cbase, gets1(&cbase, &cstore, &linesize); nlin++)
@@ -46,7 +50,7 @@ for (nlin=nslin=0; ocbase=cbase, gets1(&cbase, &cstore, &linesize); nlin++)
 		readspec();
 		nslin++;
 		}
-	if (nlin>=MAXLIN)
+	if (nlin>=MAXLIN && !morelines(nlin))
 		{
 		leftover=cstore;
 		break;
@@ -199,4 +203,31 @@ vspen(char *s)
 if (s==0) return(0);
 if (!point((intptr_t)s)) return(0);
 return(match(s, SPAN));
+}
+static int
+morelines(int n)
+{
+int inc = 200, maxlin;
+void *vp;
+if (n>MAXLIN) return(1);
+while ((maxlin = MAXLIN + inc) < n) inc *= 2;
+if ((vp = realloc(table, maxlin * sizeof *table)) == NULL)
+	return(0);
+table = vp;
+if ((vp = realloc(stynum, (maxlin + 1) * sizeof *stynum)) == NULL)
+	return(0);
+stynum = vp;
+if ((vp = realloc(fullbot, maxlin * sizeof *fullbot)) == NULL)
+	return(0);
+fullbot = vp;
+memset(&fullbot[MAXLIN], 0, inc * sizeof *fullbot);
+if ((vp = realloc(instead, maxlin * sizeof *instead)) == NULL)
+	return(0);
+instead = vp;
+memset(&instead[MAXLIN], 0, inc * sizeof *instead);
+if ((vp = realloc(linestop, maxlin * sizeof *linestop)) == NULL)
+	return(0);
+linestop = vp;
+MAXLIN = maxlin;
+return(1);
 }
